// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Refinement Types > basic refinements 1`] = `
[
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "<ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Nat"}
[3] modal {"quantity":"Many"}
  :term -> [5]
[4] var:free {"name":"Num"}
[5] var:ref {"name":"Num"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "Nat",
    "normalized": "<ω> Num [| λ(n: Num) -> (closure: FFI.$gte n 0 -| Γ: n) |]",
    "type": "Type",
  },
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "<ω> Num [| λ(p: Num) -> FFI.$gt p 0 |]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Pos"}
[3] modal {"quantity":"Many"}
  :term -> [5]
[4] var:free {"name":"Num"}
[5] var:ref {"name":"Num"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "Pos",
    "normalized": "<ω> Num [| λ(p: Num) -> (closure: FFI.$gt p 0 -| Γ: p) |]",
    "type": "Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = 42;
  return v0;
}
return main();
",
    "elaborated": "42",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"n"}
[3] lit {"value":{"type":"Num","value":42}}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 42
      return v0",
    "name": "n",
    "normalized": "42",
    "type": "<ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]",
  },
  {
    "codegenJS": "function main() {
  const v0 = 42;
  return v0;
}
return main();
",
    "elaborated": "42",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"p"}
[3] lit {"value":{"type":"Num","value":42}}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 42
      return v0",
    "name": "p",
    "normalized": "42",
    "type": "<ω> Num [| λ(p: Num) -> FFI.$gt p 0 |]",
  },
  {
    "codegenJS": "function main() {
  const v0 = 0;
  return v0;
}
return main();
",
    "elaborated": "0",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"zero"}
[3] lit {"value":{"type":"Num","value":0}}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 0
      return v0",
    "name": "zero",
    "normalized": "0",
    "type": "<ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]",
  },
]
`;

exports[`Language Tour — Refinement Types > contravariance 1`] = `
[
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "<ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Nat"}
[3] modal {"quantity":"Many"}
  :term -> [5]
[4] var:free {"name":"Num"}
[5] var:ref {"name":"Num"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "Nat",
    "normalized": "<ω> Num [| λ(n: Num) -> (closure: FFI.$gte n 0 -| Γ: n) |]",
    "type": "Type",
  },
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "<ω> Num [| λ(p: Num) -> FFI.$gt p 0 |]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Pos"}
[3] modal {"quantity":"Many"}
  :term -> [5]
[4] var:free {"name":"Num"}
[5] var:ref {"name":"Num"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "Pos",
    "normalized": "<ω> Num [| λ(p: Num) -> (closure: FFI.$gt p 0 -| Γ: p) |]",
    "type": "Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_12;
  return v0;
}

function closure_12(f) {
  const v0 = 10;
  const v1 = f(v0);
  return v1;
}
return main();
",
    "elaborated": "λ(f: Π(t2: <ω> Num [| λ(p: Num) -> FFI.$gt p 0 |]) -> Num) -> f 10",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"takePosFunction"}
[3] lambda {"variable":"f","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [8]
  :env -> [11]
[4] pi {"variable":"t2","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [7]
[5] modal {"quantity":"Many"}
  :term -> [6]
[6] lit {"value":{"type":"Atom","value":"Num"}}
[7] lit {"value":{"type":"Atom","value":"Num"}}
[8] app {"icit":"Explicit"}
  :arg -> [10]
  :func -> [9]
[9] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] lit {"value":{"type":"Num","value":10}}
[11] env
[12] closure
  :body -> [3]
  :env -> [11]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_12
      return v0
  fn closure_12(f) entry=entry
    entry:
      let v0 = 10
      let v1 = call *f(v0)
      return v1",
    "name": "takePosFunction",
    "normalized": "λ(f: Π(t2: <ω> Num [| λ(p: Num) -> (closure: FFI.$gt p 0 -| Γ: p) |]) ->
  (closure: Num -| Γ: t2)) ->
  (closure: f 10 -| Γ: f)",
    "type": "Π(t1: Π(t2: <ω> Num [| λ(p: Num) -> FFI.$gt p 0 |]) -> Num) -> Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_8;
  return v0;
}

function closure_8(x) {
  return x;
}
return main();
",
    "elaborated": "λ(x: <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]) -> x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"natToNum"}
[3] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [6]
  :env -> [7]
[4] modal {"quantity":"Many"}
  :term -> [5]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[6] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[7] env
[8] closure
  :body -> [3]
  :env -> [7]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_8
      return v0
  fn closure_8(x) entry=entry
    entry:
      return x",
    "name": "natToNum",
    "normalized": "λ(x: <ω> Num [| λ(n: Num) -> (closure: FFI.$gte n 0 -| Γ: n) |]) ->
  (closure: x -| Γ: x)",
    "type": "Π(t3: <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]) -> Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_8;
  return v0;
}

function closure_8(x) {
  return x;
}
return main();
",
    "elaborated": "λ(x: <ω> Num [| λ(p: Num) -> FFI.$gt p 0 |]) -> x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"posToNum"}
[3] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [6]
  :env -> [7]
[4] modal {"quantity":"Many"}
  :term -> [5]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[6] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[7] env
[8] closure
  :body -> [3]
  :env -> [7]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_8
      return v0
  fn closure_8(x) entry=entry
    entry:
      return x",
    "name": "posToNum",
    "normalized": "λ(x: <ω> Num [| λ(p: Num) -> (closure: FFI.$gt p 0 -| Γ: p) |]) ->
  (closure: x -| Γ: x)",
    "type": "Π(t4: <ω> Num [| λ(p: Num) -> FFI.$gt p 0 |]) -> Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = takePosFunction;
  const v1 = natToNum;
  const v2 = v0(v1);
  return v2;
}
return main();
",
    "elaborated": "takePosFunction natToNum",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"result1"}
[3] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [5]
[4] var:free {"name":"takePosFunction"}
[5] var:ref {"name":"takePosFunction"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
[6] var:free {"name":"natToNum"}
[7] var:ref {"name":"natToNum"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = takePosFunction
      let v1 = natToNum
      let v2 = call *v0(v1)
      return v2",
    "name": "result1",
    "normalized": "10",
    "type": "Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = takePosFunction;
  const v1 = posToNum;
  const v2 = v0(v1);
  return v2;
}
return main();
",
    "elaborated": "takePosFunction posToNum",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"result2"}
[3] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [5]
[4] var:free {"name":"takePosFunction"}
[5] var:ref {"name":"takePosFunction"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
[6] var:free {"name":"posToNum"}
[7] var:ref {"name":"posToNum"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = takePosFunction
      let v1 = posToNum
      let v2 = call *v0(v1)
      return v2",
    "name": "result2",
    "normalized": "10",
    "type": "Num",
  },
]
`;

exports[`Language Tour — Refinement Types > exact value refinements 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = 1;
  return v0;
}
return main();
",
    "elaborated": "1",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"exactOne"}
[3] lit {"value":{"type":"Num","value":1}}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 1
      return v0",
    "name": "exactOne",
    "normalized": "1",
    "type": "<ω> Num [| λ(v: Num) -> FFI.$eq v 1 |]",
  },
]
`;

exports[`Language Tour — Refinement Types > higher-order with refinements 1`] = `
[
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "<ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Nat"}
[3] modal {"quantity":"Many"}
  :term -> [5]
[4] var:free {"name":"Num"}
[5] var:ref {"name":"Num"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "Nat",
    "normalized": "<ω> Num [| λ(n: Num) -> (closure: FFI.$gte n 0 -| Γ: n) |]",
    "type": "Type",
  },
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "<ω> Num [| λ(p: Num) -> FFI.$gt p 0 |]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Pos"}
[3] modal {"quantity":"Many"}
  :term -> [5]
[4] var:free {"name":"Num"}
[5] var:ref {"name":"Num"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "Pos",
    "normalized": "<ω> Num [| λ(p: Num) -> (closure: FFI.$gt p 0 -| Γ: p) |]",
    "type": "Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_13;
  return v0;
}

function closure_13(f) {
  const v0 = 1;
  const v1 = f(v0);
  return v1;
}
return main();
",
    "elaborated": "λ(f: Π(t1: <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]) ->
  <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]) ->
  f 1",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"hof"}
[3] lambda {"variable":"f","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [9]
  :env -> [12]
[4] pi {"variable":"t1","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [7]
[5] modal {"quantity":"Many"}
  :term -> [6]
[6] lit {"value":{"type":"Atom","value":"Num"}}
[7] modal {"quantity":"Many"}
  :term -> [8]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] app {"icit":"Explicit"}
  :arg -> [11]
  :func -> [10]
[10] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[11] lit {"value":{"type":"Num","value":1}}
[12] env
[13] closure
  :body -> [3]
  :env -> [12]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_13
      return v0
  fn closure_13(f) entry=entry
    entry:
      let v0 = 1
      let v1 = call *f(v0)
      return v1",
    "name": "hof",
    "normalized": "λ(f: Π(t1: <ω> Num [| λ(n: Num) -> (closure: FFI.$gte n 0 -| Γ: n) |]) ->
  (closure: <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |] -| Γ: t1)) ->
  (closure: f 1 -| Γ: f)",
    "type": "Π(f: Π(t1: <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]) ->
  <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]) ->
  <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_18;
  return v0;
}

function closure_18(f) {
  const v0 = 1;
  const v1 = f(v0);
  const v2 = 1;
  const v3 = (v1 + v2);
  return v3;
}
return main();
",
    "elaborated": "λ(f: Π(t3: Num) -> <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]) -> FFI.$add (f 1) 1",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"hof2"}
[3] lambda {"variable":"f","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [16]
  :env -> [17]
[4] pi {"variable":"t3","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[6] modal {"quantity":"Many"}
  :term -> [7]
[7] lit {"value":{"type":"Atom","value":"Num"}}
[10] var:foreign {"name":"$add","arity":2}
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
  :next -> [15]
[13] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[14] lit {"value":{"type":"Num","value":1}}
[15] lit {"value":{"type":"Num","value":1}}
[16] primop {"op":"$add"}
  :arg -> [12] {"index":0}
  :arg -> [15] {"index":1}
  :callee -> [10]
[17] env
[18] closure
  :body -> [3]
  :env -> [17]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_18
      return v0
  fn closure_18(f) entry=entry
    entry:
      let v0 = 1
      let v1 = call *f(v0)
      let v2 = 1
      let v3 = +(v1, v2)
      return v3",
    "name": "hof2",
    "normalized": "λ(f: Π(t3: Num) ->
  (closure: <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |] -| Γ: t3)) ->
  (closure: FFI.$add (f 1) 1 -| Γ: f)",
    "type": "Π(t2: Π(t3: Num) -> <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]) ->
  <ω> Num [| λ(p: Num) -> FFI.$gt p 0 |]",
  },
]
`;

exports[`Language Tour — Refinement Types > input-output relationship 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_13;
  return v0;
}

function closure_13(x) {
  const v0 = 1;
  const v1 = (x + v0);
  return v1;
}
return main();
",
    "elaborated": "λ(x: Num) -> FFI.$add x 1",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"inc"}
[3] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [11]
  :env -> [12]
[4] lit {"value":{"type":"Atom","value":"Num"}}
[7] var:foreign {"name":"$add","arity":2}
[9] var:bound {"index":0}
  :next -> [10]
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] lit {"value":{"type":"Num","value":1}}
[11] primop {"op":"$add"}
  :arg -> [9] {"index":0}
  :arg -> [10] {"index":1}
  :callee -> [7]
[12] env
[13] closure
  :body -> [3]
  :env -> [12]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_13
      return v0
  fn closure_13(x) entry=entry
    entry:
      let v0 = 1
      let v1 = +(x, v0)
      return v1",
    "name": "inc",
    "normalized": "λ(x: Num) -> (closure: FFI.$add x 1 -| Γ: x)",
    "type": "Π(x: Num) -> <ω> Num [| λ(v: Num) -> FFI.$eq v (FFI.$add x 1) |]",
  },
]
`;

exports[`Language Tour — Refinement Types > ordered lists with refinement polymorphism 1`] = `
[
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "OrderedList",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"OrderedList"}
[3] mu {"variable":"x","source":"OrderedList","level":1}
  :annotation -> [4]
  :body -> [14]
[4] pi {"variable":"t","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Type"}}
[6] pi {"variable":"p","icit":"Explicit","level":2}
  :annotation -> [7]
  :body -> [13]
[7] pi {"variable":"t1","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [9]
[8] var:bound {"index":0}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
[9] pi {"variable":"t2","icit":"Explicit","level":3}
  :annotation -> [10]
  :body -> [12]
[10] var:bound {"index":1}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [7] {"level":2}
[11] var:free {"name":"Bool"}
[12] var:ref {"name":"Bool"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [9] {"level":3}
[13] lit {"value":{"type":"Atom","value":"Type"}}
[14] lambda {"variable":"t","icit":"Explicit","level":2}
  :annotation -> [15]
  :body -> [16]
  :env -> [51]
[15] lit {"value":{"type":"Atom","value":"Type"}}
[16] lambda {"variable":"p","icit":"Explicit","level":3}
  :annotation -> [17]
  :body -> [22]
  :env -> [52]
[17] pi {"variable":"t1","icit":"Explicit","level":3}
  :annotation -> [18]
  :body -> [19]
[18] var:bound {"index":0}
  :refers_to -> [14]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [14] {"level":2}
[19] pi {"variable":"t2","icit":"Explicit","level":4}
  :annotation -> [20]
  :body -> [21]
[20] var:bound {"index":1}
  :refers_to -> [14]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [14] {"level":2}
  :scope -> [17] {"level":3}
[21] lit {"value":{"type":"Atom","value":"Bool"}}
[22] app {"icit":"Explicit"}
  :arg -> [24]
  :func -> [23]
[23] lit {"value":{"type":"Atom","value":"Variant"}}
[24] row:ext {"label":"cons"}
  :rest -> [48]
  :value -> [25]
[25] sigma {"variable":"$sig","level":4}
  :annotation -> [26]
  :body -> [36]
[26] row:ext {"label":"tail"}
  :rest -> [33]
  :value -> [27]
[27] app {"icit":"Explicit"}
  :arg -> [32]
  :func -> [28]
[28] app {"icit":"Explicit"}
  :arg -> [30]
  :func -> [29]
[29] var:bound {"index":2}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [14] {"level":2}
  :scope -> [16] {"level":3}
[30] modal {"quantity":"Many"}
  :term -> [31]
[31] var:bound {"index":1}
  :refers_to -> [14]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [14] {"level":2}
  :scope -> [16] {"level":3}
[32] var:bound {"index":0}
  :refers_to -> [16]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [14] {"level":2}
  :scope -> [16] {"level":3}
[33] row:ext {"label":"head"}
  :rest -> [35]
  :value -> [34]
[34] var:bound {"index":1}
  :refers_to -> [14]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [14] {"level":2}
  :scope -> [16] {"level":3}
[35] row:empty
[36] app {"icit":"Explicit"}
  :arg -> [38]
  :func -> [37]
[37] lit {"value":{"type":"Atom","value":"Schema"}}
[38] row:ext {"label":"tail"}
  :rest -> [45]
  :value -> [39]
[39] app {"icit":"Explicit"}
  :arg -> [44]
  :func -> [40]
[40] app {"icit":"Explicit"}
  :arg -> [42]
  :func -> [41]
[41] var:bound {"index":2}
  :refers_to -> [14]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [14] {"level":2}
  :scope -> [16] {"level":3}
  :scope -> [25] {"level":4}
[42] modal {"quantity":"Many"}
  :term -> [43]
[43] var:bound {"index":1}
  :refers_to -> [16]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [14] {"level":2}
  :scope -> [16] {"level":3}
  :scope -> [25] {"level":4}
[44] var:bound {"index":0}
  :refers_to -> [25]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [14] {"level":2}
  :scope -> [16] {"level":3}
  :scope -> [25] {"level":4}
[45] row:ext {"label":"head"}
  :rest -> [47]
  :value -> [46]
[46] var:bound {"index":1}
  :refers_to -> [16]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [14] {"level":2}
  :scope -> [16] {"level":3}
  :scope -> [25] {"level":4}
[47] row:empty
[48] row:ext {"label":"nil"}
  :rest -> [50]
  :value -> [49]
[49] lit {"value":{"type":"Atom","value":"Unit"}}
[50] row:empty
[51] env
  :capture -> [3] {"index":0}
[52] env
  :capture -> [3] {"index":0}
  :capture -> [14] {"index":1}
[53] closure
  :body -> [14]
  :env -> [51]
[54] closure
  :body -> [16]
  :env -> [52]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "OrderedList",
    "normalized": "OrderedList",
    "type": "Π(t: Type) -> Π(p: Π(t1: t) -> Π(t2: t) -> Bool) -> Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = 1;
  const v1 = 2;
  const v2 = 3;
  const v3 = null;
  const v4 = {
    nil: v3
  };
  const v5 = {
    head: v2,
    tail: v4
  };
  const v6 = {
    cons: v5
  };
  const v7 = {
    head: v1,
    tail: v6
  };
  const v8 = {
    cons: v7
  };
  const v9 = {
    head: v0,
    tail: v8
  };
  const v10 = {
    cons: v9
  };
  return v10;
}
return main();
",
    "elaborated": "Struct
  [ cons: Struct
      [ head: 1,
        tail: Struct
          [ cons: Struct
              [ head: 2,
                tail: Struct
                  [ cons: Struct
                      [ head: 3, tail: Struct [ nil: unit ] ] ] ] ] ] ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"ascending"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"cons"}
  :rest -> [37]
  :value -> [6]
[6] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [7]
[7] lit {"value":{"type":"Atom","value":"Struct"}}
[8] row:ext {"label":"head"}
  :rest -> [10]
  :value -> [9]
[9] lit {"value":{"type":"Num","value":1}}
[10] row:ext {"label":"tail"}
  :rest -> [36]
  :value -> [11]
[11] app {"icit":"Explicit"}
  :arg -> [13]
  :func -> [12]
[12] lit {"value":{"type":"Atom","value":"Struct"}}
[13] row:ext {"label":"cons"}
  :rest -> [35]
  :value -> [14]
[14] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [15]
[15] lit {"value":{"type":"Atom","value":"Struct"}}
[16] row:ext {"label":"head"}
  :rest -> [18]
  :value -> [17]
[17] lit {"value":{"type":"Num","value":2}}
[18] row:ext {"label":"tail"}
  :rest -> [34]
  :value -> [19]
[19] app {"icit":"Explicit"}
  :arg -> [21]
  :func -> [20]
[20] lit {"value":{"type":"Atom","value":"Struct"}}
[21] row:ext {"label":"cons"}
  :rest -> [33]
  :value -> [22]
[22] app {"icit":"Explicit"}
  :arg -> [24]
  :func -> [23]
[23] lit {"value":{"type":"Atom","value":"Struct"}}
[24] row:ext {"label":"head"}
  :rest -> [26]
  :value -> [25]
[25] lit {"value":{"type":"Num","value":3}}
[26] row:ext {"label":"tail"}
  :rest -> [32]
  :value -> [27]
[27] app {"icit":"Explicit"}
  :arg -> [29]
  :func -> [28]
[28] lit {"value":{"type":"Atom","value":"Struct"}}
[29] row:ext {"label":"nil"}
  :rest -> [31]
  :value -> [30]
[30] lit {"value":{"type":"unit"}}
[31] row:empty
[32] row:empty
[33] row:empty
[34] row:empty
[35] row:empty
[36] row:empty
[37] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 1
      let v1 = 2
      let v2 = 3
      let v3 = unit
      let v4 = alloc { nil: v3 }
      let v5 = alloc { head: v2, tail: v4 }
      let v6 = alloc { cons: v5 }
      let v7 = alloc { head: v1, tail: v6 }
      let v8 = alloc { cons: v7 }
      let v9 = alloc { head: v0, tail: v8 }
      let v10 = alloc { cons: v9 }
      return v10",
    "name": "ascending",
    "normalized": "Struct
  [ cons: Struct
      [ head: 1,
        tail: Struct
          [ cons: Struct
              [ head: 2,
                tail: Struct
                  [ cons: Struct
                      [ head: 3, tail: Struct [ nil: unit ] ] ] ] ] ] ]",
    "type": "(OrderedList) Num (λ(x: Num) -> λ(y: Num) -> FFI.$lt x y)",
  },
  {
    "codegenJS": "function main() {
  const v0 = 3;
  const v1 = 2;
  const v2 = 1;
  const v3 = null;
  const v4 = {
    nil: v3
  };
  const v5 = {
    head: v2,
    tail: v4
  };
  const v6 = {
    cons: v5
  };
  const v7 = {
    head: v1,
    tail: v6
  };
  const v8 = {
    cons: v7
  };
  const v9 = {
    head: v0,
    tail: v8
  };
  const v10 = {
    cons: v9
  };
  return v10;
}
return main();
",
    "elaborated": "Struct
  [ cons: Struct
      [ head: 3,
        tail: Struct
          [ cons: Struct
              [ head: 2,
                tail: Struct
                  [ cons: Struct
                      [ head: 1, tail: Struct [ nil: unit ] ] ] ] ] ] ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"descending"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"cons"}
  :rest -> [37]
  :value -> [6]
[6] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [7]
[7] lit {"value":{"type":"Atom","value":"Struct"}}
[8] row:ext {"label":"head"}
  :rest -> [10]
  :value -> [9]
[9] lit {"value":{"type":"Num","value":3}}
[10] row:ext {"label":"tail"}
  :rest -> [36]
  :value -> [11]
[11] app {"icit":"Explicit"}
  :arg -> [13]
  :func -> [12]
[12] lit {"value":{"type":"Atom","value":"Struct"}}
[13] row:ext {"label":"cons"}
  :rest -> [35]
  :value -> [14]
[14] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [15]
[15] lit {"value":{"type":"Atom","value":"Struct"}}
[16] row:ext {"label":"head"}
  :rest -> [18]
  :value -> [17]
[17] lit {"value":{"type":"Num","value":2}}
[18] row:ext {"label":"tail"}
  :rest -> [34]
  :value -> [19]
[19] app {"icit":"Explicit"}
  :arg -> [21]
  :func -> [20]
[20] lit {"value":{"type":"Atom","value":"Struct"}}
[21] row:ext {"label":"cons"}
  :rest -> [33]
  :value -> [22]
[22] app {"icit":"Explicit"}
  :arg -> [24]
  :func -> [23]
[23] lit {"value":{"type":"Atom","value":"Struct"}}
[24] row:ext {"label":"head"}
  :rest -> [26]
  :value -> [25]
[25] lit {"value":{"type":"Num","value":1}}
[26] row:ext {"label":"tail"}
  :rest -> [32]
  :value -> [27]
[27] app {"icit":"Explicit"}
  :arg -> [29]
  :func -> [28]
[28] lit {"value":{"type":"Atom","value":"Struct"}}
[29] row:ext {"label":"nil"}
  :rest -> [31]
  :value -> [30]
[30] lit {"value":{"type":"unit"}}
[31] row:empty
[32] row:empty
[33] row:empty
[34] row:empty
[35] row:empty
[36] row:empty
[37] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 3
      let v1 = 2
      let v2 = 1
      let v3 = unit
      let v4 = alloc { nil: v3 }
      let v5 = alloc { head: v2, tail: v4 }
      let v6 = alloc { cons: v5 }
      let v7 = alloc { head: v1, tail: v6 }
      let v8 = alloc { cons: v7 }
      let v9 = alloc { head: v0, tail: v8 }
      let v10 = alloc { cons: v9 }
      return v10",
    "name": "descending",
    "normalized": "Struct
  [ cons: Struct
      [ head: 3,
        tail: Struct
          [ cons: Struct
              [ head: 2,
                tail: Struct
                  [ cons: Struct
                      [ head: 1, tail: Struct [ nil: unit ] ] ] ] ] ] ]",
    "type": "(OrderedList) Num (λ(x: Num) -> λ(y: Num) -> FFI.$gt x y)",
  },
]
`;

exports[`Language Tour — Refinement Types > ordered pair 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "Σ($sig: [ snd: <ω> Num [| λ(v: Num) -> FFI.$gt v :fst |], fst: Num ]) .
  Schema [ snd: <ω> Num [| λ(v: Num) -> FFI.$gt v :fst |], fst: Num ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"OrderedPair"}
[3] sigma {"variable":"$sig","level":1}
  :annotation -> [4]
  :body -> [11]
[4] row:ext {"label":"snd"}
  :rest -> [8]
  :value -> [5]
[5] modal {"quantity":"Many"}
  :term -> [7]
[6] var:free {"name":"Num"}
[7] var:ref {"name":"Num"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
[8] row:ext {"label":"fst"}
  :rest -> [10]
  :value -> [9]
[9] var:ref {"name":"Num"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
[10] row:empty
[11] app {"icit":"Explicit"}
  :arg -> [13]
  :func -> [12]
[12] lit {"value":{"type":"Atom","value":"Schema"}}
[13] row:ext {"label":"snd"}
  :rest -> [16]
  :value -> [14]
[14] modal {"quantity":"Many"}
  :term -> [15]
[15] var:ref {"name":"Num"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[16] row:ext {"label":"fst"}
  :rest -> [18]
  :value -> [17]
[17] var:ref {"name":"Num"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[18] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = alloc {  }
      return v0",
    "name": "OrderedPair",
    "normalized": "Σ($sig: [ snd: <ω> Num [| λ(v: Num) -> (closure: FFI.$gt v :fst -| Γ: v) |],
  fst: Num ]) .
  (closure: Schema
    [ snd: <ω> Num [| λ(v: Num) -> FFI.$gt v :fst |], fst: Num ] -| ·)",
    "type": "Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = 5;
  const v1 = 3;
  const v2 = {
    snd: v0,
    fst: v1
  };
  return v2;
}
return main();
",
    "elaborated": "Struct [ snd: 5, fst: 3 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"valid"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"snd"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Num","value":5}}
[7] row:ext {"label":"fst"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Num","value":3}}
[9] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 5
      let v1 = 3
      let v2 = alloc { snd: v0, fst: v1 }
      return v2",
    "name": "valid",
    "normalized": "Struct [ snd: 5, fst: 3 ]",
    "type": "Σ($sig: [ snd: <ω> Num [| λ(v: Num) -> FFI.$gt v :fst |], fst: Num ]) .
  Schema [ snd: <ω> Num [| λ(v: Num) -> FFI.$gt v Num |], fst: Num ]",
  },
]
`;

exports[`Language Tour — Refinement Types > pre and postconditions 1`] = `
[
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "<ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Nat"}
[3] modal {"quantity":"Many"}
  :term -> [5]
[4] var:free {"name":"Num"}
[5] var:ref {"name":"Num"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "Nat",
    "normalized": "<ω> Num [| λ(n: Num) -> (closure: FFI.$gte n 0 -| Γ: n) |]",
    "type": "Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_8;
  return v0;
}

function closure_8(x) {
  return x;
}
return main();
",
    "elaborated": "λ(x: <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]) -> x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"safe"}
[3] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [6]
  :env -> [7]
[4] modal {"quantity":"Many"}
  :term -> [5]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[6] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[7] env
[8] closure
  :body -> [3]
  :env -> [7]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_8
      return v0
  fn closure_8(x) entry=entry
    entry:
      return x",
    "name": "safe",
    "normalized": "λ(x: <ω> Num [| λ(n: Num) -> (closure: FFI.$gte n 0 -| Γ: n) |]) ->
  (closure: x -| Γ: x)",
    "type": "Π(n: <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]) ->
  <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]",
  },
]
`;

exports[`Language Tour — Refinement Types > refinement polymorphism 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_13;
  return v0;
}

function closure_14(x) {
  return x;
}

function closure_13(p) {
  const v0 = closure_14;
  return v0;
}
return main();
",
    "elaborated": "λ(p: Π(t1: Num) -> Bool) -> λ(x: <ω> Num [| λ(v: Num) -> p v |]) -> x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"checkNum"}
[3] lambda {"variable":"p","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [7]
  :env -> [11]
[4] pi {"variable":"t1","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[6] lit {"value":{"type":"Atom","value":"Bool"}}
[7] lambda {"variable":"x","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [10]
  :env -> [12]
[8] modal {"quantity":"Many"}
  :term -> [9]
[9] lit {"value":{"type":"Atom","value":"Num"}}
[10] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[11] env
[12] env
[13] closure
  :body -> [3]
  :env -> [11]
[14] closure
  :body -> [7]
  :env -> [12]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_13
      return v0
  fn closure_14(x) entry=entry
    entry:
      return x
  fn closure_13(p) entry=entry
    entry:
      let v0 = &closure_14
      return v0",
    "name": "checkNum",
    "normalized": "λ(p: Π(t1: Num) -> (closure: Bool -| Γ: t1)) ->
  (closure: λ(x: <ω> Num [| λ(v: Num) -> p v |]) -> x -| Γ: p)",
    "type": "Π(p: Π(t1: Num) -> Bool) -> Π(t2: <ω> Num [| λ(v: Num) -> p v |]) -> Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = checkNum;
  const v1 = closure_18;
  const v2 = v0(v1);
  const v3 = 5;
  const v4 = v2(v3);
  return v4;
}

function closure_18(n) {
  const v0 = 0;
  const v1 = (n >= v0);
  return v1;
}
return main();
",
    "elaborated": "checkNum (λ(n: Num) -> FFI.$gte n 0) 5",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"nat5"}
[3] app {"icit":"Explicit"}
  :arg -> [15]
  :func -> [4]
[4] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"checkNum"}
[6] var:ref {"name":"checkNum"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] lambda {"variable":"n","icit":"Explicit","level":1}
  :annotation -> [8]
  :body -> [16]
  :env -> [17]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[11] var:foreign {"name":"$gte","arity":2}
[13] var:bound {"index":0}
  :next -> [14]
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [7] {"level":1}
[14] lit {"value":{"type":"Num","value":0}}
[15] lit {"value":{"type":"Num","value":5}}
[16] primop {"op":"$gte"}
  :arg -> [13] {"index":0}
  :arg -> [14] {"index":1}
  :callee -> [11]
[17] env
[18] closure
  :body -> [7]
  :env -> [17]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = checkNum
      let v1 = &closure_18
      let v2 = call *v0(v1)
      let v3 = 5
      let v4 = call *v2(v3)
      return v4
  fn closure_18(n) entry=entry
    entry:
      let v0 = 0
      let v1 = >=(n, v0)
      return v1",
    "name": "nat5",
    "normalized": "5",
    "type": "Num",
  },
]
`;

exports[`Language Tour — Refinement Types > refinement subtyping 1`] = `
[
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "<ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Nat"}
[3] modal {"quantity":"Many"}
  :term -> [5]
[4] var:free {"name":"Num"}
[5] var:ref {"name":"Num"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "Nat",
    "normalized": "<ω> Num [| λ(n: Num) -> (closure: FFI.$gte n 0 -| Γ: n) |]",
    "type": "Type",
  },
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "<ω> Num [| λ(p: Num) -> FFI.$gt p 0 |]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Pos"}
[3] modal {"quantity":"Many"}
  :term -> [5]
[4] var:free {"name":"Num"}
[5] var:ref {"name":"Num"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "Pos",
    "normalized": "<ω> Num [| λ(p: Num) -> (closure: FFI.$gt p 0 -| Γ: p) |]",
    "type": "Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_8;
  return v0;
}

function closure_8(n) {
  return n;
}
return main();
",
    "elaborated": "λ(n: <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]) -> n",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"useNat"}
[3] lambda {"variable":"n","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [6]
  :env -> [7]
[4] modal {"quantity":"Many"}
  :term -> [5]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[6] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[7] env
[8] closure
  :body -> [3]
  :env -> [7]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_8
      return v0
  fn closure_8(n) entry=entry
    entry:
      return n",
    "name": "useNat",
    "normalized": "λ(n: <ω> Num [| λ(n: Num) -> (closure: FFI.$gte n 0 -| Γ: n) |]) ->
  (closure: n -| Γ: n)",
    "type": "Π(t1: <ω> Num [| λ(n: Num) -> FFI.$gte n 0 |]) -> Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = 42;
  return v0;
}
return main();
",
    "elaborated": "42",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"p"}
[3] lit {"value":{"type":"Num","value":42}}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 42
      return v0",
    "name": "p",
    "normalized": "42",
    "type": "<ω> Num [| λ(p: Num) -> FFI.$gt p 0 |]",
  },
  {
    "codegenJS": "function main() {
  const v0 = useNat;
  const v1 = p;
  const v2 = v0(v1);
  return v2;
}
return main();
",
    "elaborated": "useNat p",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"result"}
[3] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [5]
[4] var:free {"name":"useNat"}
[5] var:ref {"name":"useNat"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
[6] var:free {"name":"p"}
[7] var:ref {"name":"p"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = useNat
      let v1 = p
      let v2 = call *v0(v1)
      return v2",
    "name": "result",
    "normalized": "42",
    "type": "Num",
  },
]
`;
